# rosgodot

./: .gitignore  Camera.gd  Crane.gd  Crane.tscn  CtrlVisualization.gd  GantryCraneRos.gd  GantryCraneRos.tscn  LICENSE  README.md  Rail.tscn  project.godot
catkin_ws/gantry_crane_controller/: CMakeLists.txt  package.xml
catkin_ws/gantry_crane_controller/cfg/: Controller.cfg
catkin_ws/gantry_crane_controller/launch/: gantry_crane_controller.launch
catkin_ws/gantry_crane_controller/msg/: State.msg
catkin_ws/gantry_crane_controller/scripts/: controller_manager.py  controller_state_space.py  model.py  observer.py  params_acker.pkl  reconfigure_server.py  synth_acker.py
catkin_ws/rqt_gantry_crane/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/rqt_gantry_crane/config/: gantry_crane_gui.perspective
catkin_ws/rqt_gantry_crane/resource/: GantryCrane.ui
catkin_ws/rqt_gantry_crane/scripts/: rqt_gantry_crane
catkin_ws/rqt_gantry_crane/src/rqt_gantry_crane/: gantry_crane_widget.py  rqt_gantry_crane.py
godot/gantry_crane_ros/: Crane.gd  Crane.tscn  CraneMesh.tscn  Rail.tscn  TargetPosSprite.gd  Wheel.tscn  project.godot
godot/gantry_crane_ros/meshes/: Material_001.material  fixture.dae
godot/modules/rosgodot/: SCsub  register_types.h
meshes/: Chrome.material  Fixture.material  Rubber.material  crane.dae
modules/rosgodot/: register_types.cpp  rosgodot.cpp  rosgodot.h
res/: meshes.blend
